--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@bezalel6/react-chessground": "^2.1.1",
+    "@microsoft/signalr": "^10.0.0",
     "chess.js": "^1.4.0",
     "chessground": "^9.2.1",
     "react": "^18.3.1",
